--- a/paper/main.tex
+++ b/paper/main.tex
@@ -621,7 +621,7 @@ The code is set up for any user defined group structures and the one that is use
 To model the flow field and heat transfer in the pebble bed, porous media approach computes a liquid temperature and a fuel temperature at each point in the region and connect the two phases through convective heat transfer. The fuel temperature is of prime important in FHR transient response because of the large Doppler temperature reactivity feedback. Therefore, multiscale temperature treatment is implemented for a more realistic representation of the feedback from fuel temperature changes. 
 Temperature inside fuel pebbles are computed in three subdivided fuel layers, and likewise the fuel kernel in the TRISO particles are divided into three sub-layers, for which temperatures are tracked during a transient and are used to compute fuel region macroscopic cross-sections. In order to save computational cost, the coatings are combined into a non-heat-generating layer with equivalent heat transfer properties. The effects of this treatment on the response to reactivity insertion and overcooling transients are discussed further in section \ref{sec:TMSR_transients} when we analyze the TMSR transient behaviors.
 
-A vacuum boundary condition is applied at the outer surfaces of the reflector. And a symmetry boundary condition is used at the core center-line in 2-D axi-symmetrical models. Inlet coolant flow condition and temperature are imposed at the inlet boundary.  This enables modeling of overcooling transient by setting the inlet coolant temperature as a time dependent function. Zero pressure is set to the outlet surfaces. Slip conditions neglect viscous effects are applied to the walls that contain the fluid.  
+A vacuum boundary condition is applied at the outer surfaces of the reflector and a symmetry boundary condition is used at the core center-line in 2-D axi-symmetrical models for neutron diffusion. Inlet coolant flow condition and temperature are imposed at the inlet boundary.  This enables modeling of overcooling transient by setting the inlet coolant temperature as a time dependent function. Zero pressure is set to the outlet surfaces. Slip conditions neglect viscous effects are applied to the walls that contain the fluid.  
 
 
 % ----------------------------------------------------------------------------------------------------------------------
@@ -779,6 +779,10 @@ The relative error in flibe reactivity feedback is larger but the absolute error
 \subsection{Steady state results}
 After careful code-to-code verification for the multiphysics model, parameters such as power, flibe and fuel temperatures, and neutron flux are computed. Uniform temperature and uniform upward velocity are imposed as the inlet boundary condition. Vacuum boundary condition for neutron diffusion is used outside of the reflector.  
 
+
+An eight-group energy structure is used in the neutron diffusion equations but the neutron flux values are regrouped into thermal ([0.00E+00, 5.00E-07] MeV) and fast ([5.00E-07, 1.40E+00] MeV) regions for plotting purpose. As confirmed by the plots in Figure \ref{fig:ss_res_flux}, fast neutrons are generated exclusively from nuclear reactions in the fuel region and are then scattered by the matters in the core as they get thermalized. 
+The moderation effect of the coolant is dwarfed by that of the graphite reflector in TMSR. As a result, a large portion of thermal neutrons is found inside the reflector, besides the center of the core.
+The thermal neutrons that travel back from the reflector to the fuel region cause a peak in power density near the border as they trigger nuclear reactions. 
 % flux
 \begin{figure}
   \centering
@@ -797,9 +801,6 @@ After careful code-to-code verification for the multiphysics model, parameters s
     \label{fig:ss_res_flux}
 \end{figure}
 
-An eight-group energy structure is used in the neutron diffusion equations but the neutron flux values are regrouped into thermal ([0.00E+00, 5.00E-07] MeV) and fast ([5.00E-07, 1.40E+00] MeV) regions for plotting purpose. As confirmed by the plots in Figure \ref{fig:ss_res_flux}, fast neutrons are generated exclusively from nuclear reactions in the fuel region and are then scattered by the matters in the core as they get thermalized. 
-The moderation effect of the coolant is dwarfed by that of the graphite reflector in TMSR. As a result, a large portion of thermal neutrons is found inside the reflector, besides the center of the core.
-The thermal neutrons that travel back from the reflector to the fuel region cause a peak in power density near the border as they trigger nuclear reactions. 
 
 % power
 \begin{figure}
@@ -931,7 +932,7 @@ Figure \ref{fig:multi_comp_power_TMSR} shows that the power excursion is less se
     \label{fig:multi_comp_fuel_TMSR}
 \end{figure}
 
-Comparison of the core average and maximum flibe temperatures between the conventional porous media model and the one with the multiscale treatment is shown in figure \ref{fig:multi_comp_flibe_TMSR}. 
+Comparison of the core average and maximum flibe temperatures between the conventional porous media model and the one with the multiscale treatment is shown in Figure \ref{fig:multi_comp_flibe_TMSR}. 
 The coolant flows upward through the fuel pebbles in the TMSR SF-1 core, so the hottest coolant is found at the top. In other words, the maximum coolant temperature also represents the outlet coolant temperature, one of the most important safety parameters in a FHR because this directly relates to the temperature of the metallic structures, the most vulnerable components in a FHR in terms of temperature safety margin.
 The steady state flibe temperature is the same in both models, but both the average and the outlet coolant temperature rise to a higher value during the reactivity insertion transient in the non-multiscale case, the amount of heat deposited to coolant and the temperature reactivity feedback from the coolant are overestimated. 
 
@@ -1027,9 +1028,9 @@ In both cases, the temperatures deviate further from each other during the trans
 \end{figure}
 
 
-Starting from the steady state conditions (section \ref{sec:TMSR_SS}), the inlet coolant temperature is decreased by 100$^{\circ}C$ in 10 seconds and remains at the lower level during the simulated overcooling transient. Within the short timescale of the simulation, it is reasonable to assume that the other inlet conditions (e.g. coolant mass flow rate) and the reactor control parameters (e.g. control rod positions) remain unchanged. 
+Starting from the steady state conditions, the inlet coolant temperature is decreased by 100$^{\circ}C$ in 10 seconds and remains at the lower level during the simulated overcooling transient. Within the short timescale of the simulation, it is reasonable to assume that the other inlet conditions (e.g. coolant mass flow rate) and the reactor control parameters (e.g. control rod positions) remain unchanged. 
 
-The colder coolant introduces positive reactivity insertion due to negative flibe temperature reactivity feedback, which causes a power increase, as shown in figure \ref{fig:OC_power}. The increase is slow at the beginning because the temperature reactivity feedback is mainly from the coolant, weaker then the Doppler feedback from the fuel, which comes into effect after about 10 seconds when the cooling reaches the fuel materials. 
+The colder coolant introduces positive reactivity insertion due to negative flibe temperature reactivity feedback, which causes a power increase, as shown in Figure \ref{fig:OC_power}. The increase is slow at the beginning because the temperature reactivity feedback is mainly from the coolant, weaker then the Doppler feedback from the fuel, which comes into effect after about 10 seconds when the cooling reaches the fuel materials. 
 Because the transient is initiated in the coolant, the multiscale power increases less than that in the model with uniform fuel temperature, because it can capture the feedback from fuel while the fuel material gets cooled gradually from the shell to the center kernel.
 The change in temperature in turn results in  negative reactivity feedback that stabilize the power at a higher level than the initial rate. 
 
@@ -1053,14 +1054,12 @@ The temperatures gradient inside a fuel pebble is higher after the transient bec
 
 
 \section{Conclusion}
-Strict safety requirement for next-generation reactors along with the progress in computer technology prompts the development, qualification and application of time-dependent multiphysics models for nuclear reactors.
-In this paper has developed a methodology for building coupled neutronics/thermal-hydraulics model for FHRs based on multigroup neutron diffusion and porous media CFD, with a multiscale treatment. The model provides high resolution two dimensional or three dimensional results within a reasonable amount of time on a computer with 16.0 GB RAM and four Intel Core equipped with i7-4790K CPU at 4.00 GHz.
+Strict safety requirement for next-generation reactors along with the progress in computer technology prompts the development, qualification and application of time-dependent multiphysics models for nuclear reactors. This paper presents a methodology for building coupled neutronics/thermal-hydraulics model for FHRs based on multigroup neutron diffusion and porous media CFD, with a multiscale treatment. The method provides high resolution two dimensional or three dimensional results within a reasonable amount of time on a computer with 16.0 GB RAM and four Intel Core equipped with i7-4790K CPU at 4.00 GHz.
 
 In conventional porous media formulation, only an average temperature inside the solid phase is computed. This is a reasonable assumption in steady state cases and in most slow transient problems where the fuel kernel temperature is very close to the temperature of the surrounding graphite matrix. However, in the case of fast transients involving large power excursions, the difference between fuel and graphite temperatures can be significant. Thus a detailed temperature profile inside the fuel pebbles and TRISO fuel kernels is necessary for accurately computing temperature, which is important in capturing the Doppler temperature reactivity feedback.
 Overall, the power excursion in response to either a large reactivity insertion or a overcooling transient is dampened when a temperature profile in the fuel element is used, because the temperature reactivity feedback is captured more realistically at the place where the largest feedback occurs.
 
-The methodology has been applied to the TMSR SF-1. 
-Although the results discussed in this paper are based on a specific FHR design, the methodology can be used for all pebble bed FHRs.
+Although the methodology can be used for all pebble bed FHRs, the results discussed in this paper are based on a specific FHR design, the TMSR SF-1.
 Steady state and transient results of power, temperatures and neutron flux are discussed in this paper. The use of thermal resistant TRISO fuel, flibe coolant and graphite reflectors renders the core extremely robust against accidents. 
 Because of the use of highly robust elements in the core, failures due to high temperature would be more likely to occur at the hot legs outside the core.
 The fuel and coolant temperature during a 1\$ reactivity insertion is within the safety limit.
